--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	<script src="dist/js/platzi-video.js"></script>
+	<div id="app"></div>
+	<script src="http://localhost:9000/js/platzi-video.js"></script>
 </body>
 </html>
