Incluyendo index.html with references of PROD

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Platzi video</title>
-	<link rel="stylesheet" href="/dist/css/home.827e0a9c47a6719ba9ad.css">
+	<link rel="stylesheet" href="./dist/css/home.7891b5f5672774b0dc01.css">
 </head>
 <body>
 	<div id="home-container"></div>
 	<div id="modal-container"></div>
-  <script src="/dist/js/home.827e0a9c47a6719ba9ad.js"></script>
+  <script src="./dist/js/home.7891b5f5672774b0dc01.js"></script>
 	<!-- <script src="http://localhost:9000/js/home.js"></script> -->
 </body>
 </html>
